# rio_renderer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
app/: CMakeLists.txt
app/rio_renderer/: CMakeLists.txt  main.cpp  renderer.cpp  renderer.h
cmake/: ConfigureTimeDependency.cmake  External_Assimp.CMakeLists.txt.in  External_Eigen3.CMakeLists.txt.in  External_Json.CMakeLists.txt.in  External_OpenCV.CMakeLists.txt.in  External_tinyply.CMakeLists.txt.in  LinkAssimp.cmake  LinkEigen3.cmake  LinkOpenCV.cmake  UseAssimp.cmake  UseEigen3.cmake  UseOpenCV.cmake  Usetinyply.cmake
include/: JsonUtil.h  Logging.h  PathTool.hpp  cameraParameter.h  parser.hpp
libDataLoader/: CMakeLists.txt
libDataLoader/include/dataLoader/: DFGDataLoader.h  dataloader_3rscan.h  dataloader_DFGIMG.h  dataloader_ICLNUIM.h  dataloader_TUMRGBD.h  dataloader_img.h  dataloader_scannet.h  datasetDFGIMG.h  datasetScanNet.h  dataset_loader.h  dataset_loader_facotry.h  dataset_types.h  util.h
libDataLoader/src/: dataloader_3rscan.cpp  dataloader_iclnuim.cpp  dataloader_scannet.cpp  dataloader_tumrgbd.cpp
renderer/: Renderer3RScan.h  Scan3R_json_loader.h
